Fix white space in verify

--- a/src/assets/styles/_verify.scss
+++ b/src/assets/styles/_verify.scss
@@ -1,12 +1,7 @@
 .verify {
-  //background-image: url("./assets/img/red.png");
-  //background-repeat: no-repeat;
   @media (max-width: 960px) {
    display: none !important;
   }
-  height: 710px;
-  width: 536px;
-  justify-self: center;
 }
 .nofilefound-1 {
   position: absolute;
